feat: [COSRS-21] finalizada implementação do logar usuário/jwt/env.
